# llm-council-plus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/: council.py  main.py  ollama.py  openrouter.py  requirements.txt  storage.py
backend/tests/: test_council_router_type.py  test_router_per_conversation_storage.py  test_runtime_settings_integration.py
docs/plans/: 2026-01-10-docker-restart-smoke.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  LoginScreen.jsx  ModelSelector.css  ModelSelector.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  Sidebar.jsx  Stage1.jsx  Stage3.jsx
